--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -58,14 +58,27 @@
 
     <TextView
         android:id="@+id/tvGenres"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvTitle"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="9dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="-68dp"
+        android:layout_toEndOf="@+id/textView6"
+        android:fontFamily="@font/opensans_light"
+        android:textColor="@color/light_gray"
+        tools:text="Comedy, Family" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvTitle"
+        android:layout_marginStart="7dp"
         android:layout_marginTop="7dp"
         android:layout_toEndOf="@+id/tvYear"
         android:fontFamily="@font/opensans_light"
         android:textColor="@color/light_gray"
-        tools:text="Comedy, Family" />
+        android:text="|" />
 </RelativeLayout>
